--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,16 @@
                         <artifactId>kotlinx-coroutines-core</artifactId>
                         <version>1.7.0-Beta</version>
                     </dependency>
+                    <dependency>
+                        <groupId>io.ktor</groupId>
+                        <artifactId>ktor-client-core-jvm</artifactId>
+                        <version>2.2.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>io.ktor</groupId>
+                        <artifactId>ktor-client-okhttp-jvm</artifactId>
+                        <version>2.2.4</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
@@ -176,6 +186,16 @@
             <version>1.7.0-Beta</version>
         </dependency>
         <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-client-core-jvm</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-client-okhttp-jvm</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
             <groupId>io.github.microutils</groupId>
             <artifactId>kotlin-logging-jvm</artifactId>
             <version>3.0.5</version>
@@ -183,7 +203,17 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.6</version>
+            <version>1.3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
         </dependency>
     </dependencies>
 
