--- a/pom.xml
+++ b/pom.xml
@@ -196,14 +196,9 @@
             <version>2.2.4</version>
         </dependency>
         <dependency>
-            <groupId>io.github.microutils</groupId>
+            <groupId>io.github.oshai</groupId>
             <artifactId>kotlin-logging-jvm</artifactId>
-            <version>3.0.5</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.3.6</version>
+            <version>4.0.0-beta-22</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
