--- a/pom.xml
+++ b/pom.xml
@@ -194,14 +194,19 @@
             <version>1.7.1</version>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-test</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+        <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-client-core-jvm</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.7</version>
         </dependency>
         <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-client-okhttp-jvm</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.7</version>
         </dependency>
         <dependency>
             <groupId>io.github.oshai</groupId>
