--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,7 @@
         <dependency>
             <groupId>io.github.oshai</groupId>
             <artifactId>kotlin-logging-jvm</artifactId>
-            <version>4.0.0-beta-22</version>
+            <version>6.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
